# argue

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
argue-react/: .env  package-lock.json  package.json
argue-react/public/: index.html
argue-react/src/: App.css  App.tsx
argue-react/src/game/: Canvas.tsx  Game.tsx
argue-react/src/util/: util.jsx
argue-rust/: Cargo.toml
argue-rust/src/: main.rs  model.rs  openai.rs  socket_handler.rs
argue-rust/src/api/: openai.rs
argue-rust/src/model/: messenger.rs  proof.rs
backend/: Cargo.toml  argue.example.toml
backend/src/: config.rs  main.rs  model.rs  openai.rs  routes.rs  socket_handler.rs
backend/src/ai/: mod.rs  openai.rs  system_message.txt
backend/src/model/: proof.rs
frontend/: bun.lockb  package.json  tailwind.config.js
frontend/src/: main.tsx
frontend/src/components/: Card.tsx
frontend/src/lib/: util.ts  websocket.ts
frontend/src/pages/: game.tsx  landing.tsx
