[package]
name = "argue-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", default-features=false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.194", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
generational-arena = { version = "0.2.9", features = ["serde"] }
axum = { version = "0.6.20", features = ["ws", "tracing", "macros"] }
futures-util = "0.3.30"
serde_json = "1.0.111"
tower-http = { version = "0.4.4", features = ["cors", "fs"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
